# GameTheoryAI

./: .gitignore  README.md  TASK.md  adb.py  click.py  detect_cards.py  environment.yml  mahjong.py  main.py  poker_ocr.py  poker_ocr_v2.py  pyproject.toml  requirements.txt  setup.py  setup_env.py  temp.py  test.py  test_api.py  todo.md  train.py  train_rfdetr.ipynb  train_rfdetr.py  train_rfdetr1.ipynb  train_rfdetr_test.py  train_roboflow.py  train_roboflow_test.py  train_test.py
config/: app_config.yaml  config.yaml  config_app.yaml  config_train.yaml  game_config.yaml  mahjong.yaml  ocr_config.json
core/: capture.py  strategy.py
dataset/: README.dataset.txt  README.roboflow.txt
dataset/test/: _annotations.coco.json
dataset/train/: _annotations.coco.json
dataset/valid/: _annotations.coco.json
datasets/: README.dataset.txt  README.roboflow.txt  data.yaml
docs/: adb_screenshot_module.py  api.md  decision_module.py  doc.md  德州扑克 AI 机器人系统架构设计.md
engine/: MahjongOCR.py  ocrengine.py
fetch/: __init__.py  adb.py
notebook/: llama2_7b_pokerbench.ipynb  train_rfdetr.ipynb
scripts/: install.sh  run_tests.sh  setup_env.sh
src/: __init__.py  capture.py  decision.py  executor.py  recognize.py
src/api/: routes.py
src/control/: click.py
src/core/: __init__.py  adb.py  ai_card.py  copy_region.py  enums.py  game_click.py  game_controller.py  game_executor.py  game_maker.py  game_state.py  ocr.py  ocr_all.py  ocr_card.py  ocr_color.py  ocr_region.py  ocrall.py  screen.py  screen_all.py  screen_region.py
src/test/: test_ocr.py
src/train/: train.py  train_test.py
src/utils/: __init__.py  adb.py  adb_utils.py  auto_screenshot.py  config_utils.py  log_utils.py  logger.py  mahjong_ocr.py  make_models.py  ocr.py  ocr_v2.py  utils.py
src/vision/: __init__.py  ocr.py  ocrall.py  screen.py
task/: screenshot_control.py  screenshot_task.py
test/: localtest.py  test1.py  test_screenshot.py
tests/: test_core.py
vision/: predictor.py  utils.py
web/: app.py
(+384 files in other folders)
